<?xml version="1.0"?>
<package format="3">
  <name>unitree-dex1-ezgripper-driver</name>
  <version>0.0.0</version>
  <description>The unitree-dex1-ezgripper-driver package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
